--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "firebase": "^5.8.2",
     "moment": "^2.23.0",
+    "nprogress": "^0.2.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
+    "vue-spinners": "^1.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
